# UFS_UTILS

./: CMakeLists.txt
.github/workflows/: macos_clang.yaml  ubuntu_gcc.yaml  ubuntu_intel.yaml
modulefiles/: build.hera.intel.lua
sorc/: CMakeLists.txt
sorc/esmf_remap.fd/: CMakeLists.txt
sorc/esmf_remap.fd/sorc/: CMakeLists.txt  interp.F90  io.F90  namelist.F90  regrid.F90
sorc/esmf_remap_py.fd/: CMakeLists.txt
sorc/esmf_remap_py.fd/sorc/: CMakeLists.txt  interp.F90  io.F90  namelist.F90  regrid.F90  variables.F90
sorc/esmf_remap_py.fd/ush/: esmf_remap.py  grids.py  ncio.py  regrid.py
